--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,9 +7,9 @@ main
         display: flex
         flex-direction: column
         align-items: center
-        h1
+        .title
             margin: 0
-        button
+        .sign-in-button
             margin-top: 10px
             border-radius: 5px
             width: 100%
@@ -26,7 +26,7 @@ main
             transition: background-color 0.3s ease
             &:hover
                 background-color: #333333
-            img
+            .github-icon
                 width: 30px
                 height: 30px
                 margin-right: 15px
